Temporary Page Redirect

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
 <body>
 <h1>Hello World</h1>
 </body>
+</html> -->
+
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <script>window.location.href = 'https://github.com/Terence2018';</script>
+        <title>Redirecting...</title>
+    </head>
+    <body>
+        <p>If you are not redirected automatically, click <a href="https://github.com/Terence2018">here</a>.</p>
+    </body>
 </html>
