--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="section-card" style="font-size: 24px;">
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
                 <p>Hi, I'm Terence, a passionate developer specializing in data science and machine learning. I enjoy learning and experimenting with new technologies, as well as solving complex problems with code. I'm most proficient with the languages listed below, but I'm always looking out for new opportunities to explore new languages.</p>
-                <p>I enjoy the challenge and process of turning an idea into reality, and I find that programming is the best way for me to achive those goals. While my background in Cognitive Science focuses more on programming and data analytics, I enjoy programming in my off-time as well in the form of game development.</p>
+                <p>I enjoy the challenge and process of turning an idea into reality, and I find that programming is the best way for me to achieve those goals. While my background in Cognitive Science focuses more on programming and data analytics, I enjoy programming in my off-time as well in the form of game development.</p>
                 <p>Please check out some of my projects down below, and feel free to contact me for any questions. I'd be happy to answer them.</p>
             </div>
 
